// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image with data should render an image with alt text 1`] = `
<ForwardRef>
  <FigureContainer
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    captionBlock={null}
    copyright={null}
    height={420}
    lazyLoad={true}
    ratio={65.625}
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
    type=""
    width={640}
  />
</ForwardRef>
`;

exports[`Image with data should render an image with alt text and caption 1`] = `
<ForwardRef>
  <FigureContainer
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    captionBlock={
      Object {
        "model": Object {
          "blocks": Array [
            Object {
              "model": Object {
                "blocks": Array [
                  Object {
                    "model": Object {
                      "blocks": Array [
                        Object {
                          "model": Object {
                            "attributes": Array [],
                            "text": "Study by the Home Office about the Syrian Vulnerable Persons Resettlement Scheme",
                          },
                          "type": "fragment",
                        },
                      ],
                      "text": "Study by the Home Office about the Syrian Vulnerable Persons Resettlement Scheme",
                    },
                    "type": "paragraph",
                  },
                ],
              },
              "type": "text",
            },
          ],
        },
        "type": "caption",
      }
    }
    copyright={null}
    height={420}
    lazyLoad={true}
    ratio={65.625}
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
    type=""
    width={640}
  />
</ForwardRef>
`;

exports[`Image with data should render an image with alt text and offscreen copyright 1`] = `
<ForwardRef>
  <FigureContainer
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    captionBlock={null}
    copyright="Getty images"
    height={420}
    lazyLoad={true}
    ratio={65.625}
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
    type=""
    width={640}
  />
</ForwardRef>
`;

exports[`Image with data should render an image with other originCode - this would be a broken image 1`] = `
<ForwardRef>
  <FigureContainer
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    captionBlock={null}
    copyright="Getty images"
    height={420}
    lazyLoad={true}
    ratio={65.625}
    src="https://ichef.bbci.co.uk/news/640/other/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
    type=""
    width={640}
  />
</ForwardRef>
`;

exports[`Image with data should render an image with the default originCode \`cpsdevpb\` - empty string 1`] = `
<ForwardRef>
  <FigureContainer
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    captionBlock={null}
    copyright="Getty images"
    height={420}
    lazyLoad={true}
    ratio={65.625}
    src="https://ichef.bbci.co.uk/news/640/cpsdevpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
    type=""
    width={640}
  />
</ForwardRef>
`;

exports[`Image with data should render an image with the default originCode \`cpsdevpb\` - null 1`] = `
<ForwardRef>
  <FigureContainer
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    captionBlock={null}
    copyright="Getty images"
    height={420}
    lazyLoad={true}
    ratio={65.625}
    src="https://ichef.bbci.co.uk/news/640/cpsdevpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
    type=""
    width={640}
  />
</ForwardRef>
`;
